syntax = "proto3";
package services;

/*
    Definition of services related to invoice creation and update
*/
service InvoiceUploader {
    //CreateXMLInvoice Service to create XML Invoice
    rpc CreateXMLInvoice(Invoice) returns (Response) {}

    //UpdateInvoicePreview Service to upload invoice preview as a stream
    rpc UpdateInvoicePreview(stream InvoicePreview) returns (Response) {}

    //UpdateAttachment Service to upload invoice attachment as a stream
    rpc UpdateAttachment(stream Attachment) returns (Response) {}

    //UpdateCounterPartyVAT Service to update invoice VAT
    rpc UpdateCounterPartyVAT(CounterPartyVAT) returns (Response){}
}

// CounterPartyVAT Message format for Updating the Invoice VAT
message CounterPartyVAT {
    string VAT = 1;
    string Country = 2;
    int64 InvoiceNumber = 3;
    InvoiceType Type = 4;
}

/*
    Definition of services related to invoice querying
*/
service InvoiceGetter {
    // GetInvoicePreview Downloads the Invoice preview as a stream
    rpc GetInvoicePreview(QueryInvoice) returns (stream InvoicePreview) {}

    // GetAttachments Gets all Attachments of an Invoice
    rpc GetAttachments(QueryInvoice) returns (AttachmentsResponse) {}

    // GetAttachment Downloads a single Attachment of na Invoice as a stream
    rpc GetAttachment(QueryAttachment) returns (stream AttachmentsResponse) {}
}

// QueryAttachment to download single Attachment of an Invoice
message QueryAttachment {
    string Filename = 1;
}

// QueryInvoice used to search for an Invoice
message QueryInvoice {
    int64 InvoiceNumber = 1;
}

// AttachmentsResponse for downloading or requesting attachments
message AttachmentsResponse {
    bytes Data = 1;
    int64 InvoiceNumber = 2;
    repeated string Filenames = 3;
    string Filename = 4;
}

//Identifies the AP or AR Invoice Types
enum InvoiceType {
    AP = 0;
    AR = 1;
}

// Invoice is the invoice creation input
message Invoice {
    //Data XML file data from Finvoice 1.3 Standard
    bytes Data = 1;
    //Issuer_id Specification UUID type (This identifier is a 128-bit)
    string Issuer_id = 2;
    //Attachments are optional pdf files
    repeated bytes Attachments = 3;
    //Type defines the Invoice Type
    InvoiceType Type = 4;
}

// InvoicePreview data format for Invoice Download
message InvoicePreview {
    int64 InvoiceNumber = 1;
    bytes Preview = 2;
    string Issuer_id = 3;
    string CounterpartyVat = 4;
}

//Attachment pdf files to be sent through stream
message Attachment {
    int64 InvoiceNumber = 1;
    bytes Content = 2;
    string Issuer_id = 3;
    string CounterpartyVat = 4;
}


//eStatus Enumeration of response
enum eStatus {
    Error = 0;
    Ok = 1;
}
//Response for Invoice Update services
message Response {
    eStatus Status = 1;
    string Description = 2;
}

//InternalInvoice is the simplified Invoice for internal usage
message InternalInvoice {
    InvoiceType Type = 1;
    string CustomerID = 2;
    int64 InvoiceNumber = 3;    
    string Currency = 4;
    int64 FaceValue =5;
    string CounterPartyVAT = 6;
	string CounterPartyCountry = 7;
    string IssueDate = 8;
    string DueDate = 9;
    bool ValidVAT = 10;
    bytes InvoiceFile = 11;
    string CompanyName = 12;
}





